refactor: code cleanup for better readability